examples/errors/class_static_field_name/main.lc

class A {

	static b = 3

}
